@@ -1,6 +1,7 @@
 = Version History =
 x.x:
 - changed: temporary fix to copy Piwik setting from phloor_analytics_piwik to analytics
+- chnaged: subsite acl display name now contains more text
 - fixed: PHP notice undeclared variable
 - fixed: PHP warning in content_stats widget
 - fixed: PHP undefined index warnings in web_services.php
